--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -1284,17 +1284,32 @@ print(xtable(top.carmeli.genes),
       sanitize.text.function=genes.table.sanitize,include.rownames=FALSE)
 setkey(top.carmeli.genes,"Gene symbol")
 @ 
-\caption{Expression in \ac{FPKM} of top 50 genes which are not ribosomal, 
-mitochondrial, or whose human ortholog is a housekeeping gene in
-  \textit{Spalax carmeli}}
+\caption{\tableexplanation{\carmeli}{tab:all_spalax_carmeli_placenta}}
 \label{tab:top50_s_carmeli_placenta}
 \end{table}
 
 The 50 non-housekeeping genes with highest expression (by \ac{FPKM})
-in the term placenta of \textit{Spalax carmeli} are shown in
-\cref{tab:top50_s_carmeli_placenta} with a list of all highly expressed
-genes in Supplemental \cref{tab:all_spalax_carmeli_placenta}.
-
+in the term placenta of \carmeli are shown in
+\cref{tab:top50_s_carmeli_placenta} with a list of all highly
+expressed genes in Supplemental
+\cref{tab:all_spalax_carmeli_placenta}. Numerous hemoglobin subunits
+ware highly expressed
+(\Sexpr{gene.expression("spalax_carmeli","Hbb-bh1",complete=TRUE)},
+\Sexpr{gene.expression("spalax_carmeli","Hbb-a1",complete=TRUE)}, and
+\Sexpr{gene.expression("spalax_carmeli","Hbb-bs",complete=TRUE)}), as
+well as the relaxin
+\Sexpr{gene.expression("spalax_carmeli","Rln1",complete=TRUE)},
+multiple cathespins
+(\Sexpr{gene.expression("spalax_carmeli","Ctsm",complete=TRUE)},
+\Sexpr{gene.expression("spalax_carmeli","BC051665",complete=TRUE)},
+and \Sexpr{gene.expression("spalax_carmeli","Ctsl",complete=TRUE)},
+\cref{fig:cathespin_evolution_tree}), and many prolactin-related genes
+(\Sexpr{gene.expression("spalax_carmeli","Prl4a1",complete=TRUE)},
+\Sexpr{gene.expression("spalax_carmeli","Prl6a1",complete=TRUE)},
+\Sexpr{gene.expression("spalax_carmeli","Prl3b1",complete=TRUE)}, and
+\Sexpr{gene.expression("spalax_carmeli","Prl7c1",complete=TRUE)},
+\cref{fig:prolactin_evolution_tree}) which shows a similar pattern of
+expansion seen in \mouse.
 
 \subsection{Laurasiatheria}
 
